--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,8 @@
     "tagDirective": "https://github.com/twhtanghk/tagDirective/archive/master.tar.gz",
     "angular-activerecord": "~0.3.0",
     "ng-file-upload": "~3.2.4",
-    "angular-touch": "~1.3.15"
+    "angular-touch": "~1.3.15",
+    "ionic-datepicker": "~0.3.0",
+    "ng-table": "~0.5.4"
   }
 }
