--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,7 @@
     "tests"
   ],
   "devDependencies": {
-    "ionic": "driftyco/ionic-bower#1.1",
+    "ionic": "driftyco/ionic-bower#1.0.0-beta.14",
     "ngCordova": "~0.1.12-alpha"
   },
   "dependencies": {
@@ -23,7 +23,9 @@
     "angular-activerecord": "~0.3.0",
     "ng-file-upload": "~3.2.4",
     "angular-touch": "~1.3.15",
-    "ionic-datepicker": "~0.3.0",
-    "ng-table": "~0.5.4"
+    "ionic-datepicker": "~0.3.0"
+  },
+  "resolutions": {
+    "angular": "1.3.6"
   }
 }
