--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,7 @@
     "tests"
   ],
   "devDependencies": {
-    "ionic": "driftyco/ionic-bower#1.0.0-beta.14",
+    "ionic": "driftyco/ionic-bower#1.0.1",
     "ngCordova": "~0.1.12-alpha"
   },
   "dependencies": {
@@ -26,6 +26,6 @@
     "ionic-datepicker": "~0.3.0"
   },
   "resolutions": {
-    "angular": "1.3.6"
+    "angular": "1.3.13"
   }
 }
