--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,7 @@
     "angular-activerecord": "~0.3.0",
     "ng-file-upload": "~3.2.4",
     "angular-touch": "~1.3.15",
+    "PageableAR": "*",
     "ionic-datepicker": "~0.9.0"
   },
   "resolutions": {
