--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node_modules/.bin/coffee --nodejs --debug app.coffee"
   },
-  "dependencies": {    
+  "dependencies": {
     "body-parser": "^1.12.2",
     "coffee-script": "^1.9.1",
     "connect-busboy": "0.0.1",
@@ -61,7 +61,7 @@
     "org.apache.cordova.file-transfer"
   ],
   "cordovaPlatforms": [
-    "android",
-    "ios"
+    "ios",
+    "android"
   ]
 }
