--- a/bower.json
+++ b/bower.json
@@ -24,7 +24,8 @@
     "ng-file-upload": "~3.2.4",
     "angular-touch": "~1.3.15",
     "PageableAR": "*",
-    "ionic-datepicker": "~0.9.0"
+    "ionic-datepicker": "~0.9.0",
+    "ionic-press-again-to-exit": "*"
   },
   "resolutions": {
     "angular": "1.3.13"
