--- a/bower.json
+++ b/bower.json
@@ -25,7 +25,10 @@
     "angular-touch": "~1.3.15",
     "PageableAR": "*",
     "ionic-datepicker": "~0.9.0",
-    "ionic-press-again-to-exit": "*"
+    "ionic-press-again-to-exit": "*",
+    "angular-translate": "~2.8.1",
+    "angular-translate-loader-static-files": "~2.8.1",
+    "angular-i18n": "~1.4.7"
   },
   "resolutions": {
     "angular": "1.3.13"
