--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "errorhandler": "^1.3.5",
     "express": "^4.12.3",
     "express-session": "^1.10.4",
+    "https-proxy-agent": "~1.0.0",
     "i18n": "~0.4.1",
     "jade": "^1.9.2",
     "log4js": "~0.6.14",
@@ -24,14 +25,14 @@
     "mongoose-schema-extend": "0.1.7",
     "morgan": "^1.5.2",
     "multer": "^0.1.8",
-    "needle": "~0.7.1",
+    "needle": "~0.9.2",
     "parsed-url": "0.0.0",
     "passport": "0.1.17",
     "passport-http-bearer": "1.0.1",
     "passport-ttsoon": "https://github.com/twhtanghk/passport-ttsoon/archive/master.tar.gz",
     "promise": "^4.0.0",
     "serve-favicon": "^2.2.0",
-    "underscore": "~1.6.0",
+    "underscore": "~1.8.0",
     "zappajs": "~0.4.22"
   },
   "devDependencies": {
@@ -47,8 +48,8 @@
     "gulp-less": "^3.0.1",
     "gulp-minify-css": "^0.3.0",
     "gulp-rename": "^1.2.0",
-    "gulp-sass": "^0.7.1",
-    "gulp-util": "^3.0.3",
+    "gulp-sass": "^2.1.1",
+    "gulp-util": "^3.0.6",
     "shelljs": "^0.3.0",
     "vinyl-source-stream": "^1.0.0"
   },
