--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,25 @@
 version: '2'
 services:
-   healthcheck_mongo:
+   reservation_mongo:
       image: mongo
-      container_name: healthcheck_mongo
-      hostname: healthcheck_mongo
+      container_name: reservation_mongo
+      hostname: reservation_mongo
       ports:
         - 27017
       volumes:
-      - /home/myroot/docker.shell/healthcheck/data:/data/db      
+      - /home/myroot/docker.shell/reservation/data:/data/db      
       command: mongod --directoryperdb  
       
-   healthcheck:
+   reservation:
       depends_on:
-        - healthcheck_mongo
-      image: jokyip/healthcheck
-      container_name: healthcheck
-      hostname: healthcheck
+        - reservation_mongo
+      image: jokyip/reservation
+      container_name: reservation
+      hostname: reservation
+      ports:
+        - 1337
       volumes:
-       - /home/myroot/docker.shell/healthcheck/conf/server.coffee:/usr/src/app/config/env/production.coffee
-       - /home/myroot/docker.shell/healthcheck/conf/client.coffee:/usr/src/app/www/js/env.coffee
+       - /home/myroot/docker.shell/reservation/docker/config/server.coffee:/usr/src/app/env.coffee
        - /etc/ssl/certs:/etc/ssl/certs       
        - /usr/local/share/ca-certificates:/usr/local/share/ca-certificates
    
