--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "gulp-sass": "^2.1.1",
     "gulp-util": "^3.0.6",
     "shelljs": "^0.3.0",
-    "vinyl-source-stream": "^1.0.0"
+    "vinyl-source-stream": "^1.0.0",
     "yargs": "^3.19.0"
   },
   "cordovaPlugins": [
